# fastapi-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
config/: development.yaml  docker.yaml  production.yaml  test.yaml
src/app/: __init__.py  application.py  container.py  fast_api.py  logger.py  utils.py
src/app/instances/: api.py
src/config/: app.py
src/module/: container.py  providers.py
src/module/common/: container.py
src/module/common/application/: use_case.py
src/module/common/application/http/: router.py  status.py
src/module/common/domain/: entities.py  repository.py  rules.py  values.py
src/module/common/infrastructure/sqlalchemy/: __init__.py  builders.py  config.py  container.py  unit_of_work.py
tests/behaviour/: conftest.py
tests/behaviour/api/: conftest.py
tests/behaviour/api/status/: test_status_health.py
tests/unitary/app/utils/: singleton_test.py
