[tool.poetry]
name = "my-service"
version = "0.1.0"
description = "A template to bouid your project!"
authors = [
    "Aran Moncusi Ramirez <aran@digitalpoet.info>"
]

readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "^3.13"
dependency-injector = "^4.44.0"
fastapi = "^0.115.6"
uvicorn = "^0.32.0"
pydantic = "^2.10.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.38"}

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
coverage = "^7.6.9"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
